Fix a number of marketplace issues: * Minor CSS change to not vertically align images to the middle.  Whole UX needs a load of help. * Remove the extract() call to the args var.  Wasn't doing anything besides throwing a notice. * Add user agent string to Auth requests.  Necessary with new server mod_sec rules.

--- a/wpsc-components/marketplace-core-v1/static/admin.css
+++ b/wpsc-components/marketplace-core-v1/static/admin.css
@@ -217,7 +217,6 @@
 		.sputnik-plugin .sputnik-plugin-thumb {
 			display: table-cell;
 			text-align: center;
-			vertical-align: middle;
 			width: 200px;
 			height: 200px;
 			margin-top: 25px;
